--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     
 <h1>XYZ</h1>
-    <script src="class.js"></script>
-    <script src="object.js"></script>
+    <!-- <script src="class.js"></script>
+    <script src="object.js"></script> -->
+    <script src="bind.js"></script>
 </body>
 </html>
